[package]
name = "hotshot-state-prover"
description = "Generate state update proof for HotShot light client"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-srs = { workspace = true }
ark-std = { workspace = true }
async-std = { workspace = true }
clap = { workspace = true }
contract-bindings = { path = "../contract-bindings" }
displaydoc = { version = "0.2.3", default-features = false }
espresso-types = { path = "../types", features = ["testing"] }
ethers = { workspace = true }
futures = { workspace = true }
hotshot-contract-adapter = { workspace = true }
hotshot-stake-table = { workspace = true }
hotshot-types = { workspace = true }
itertools = { workspace = true }
jf-crhf = { workspace = true }
jf-pcs = { workspace = true }
jf-plonk = { workspace = true }
jf-relation = { workspace = true }
jf-rescue = { workspace = true, features = ["gadgets"] }
jf-signature = { workspace = true, features = ["schnorr", "bls", "gadgets"] }
jf-utils = { workspace = true }
reqwest = { workspace = true }
sequencer-utils = { path = "../utils" }
serde = { workspace = true }
serde_json = { workspace = true }
surf-disco = { workspace = true }
tide-disco = { workspace = true }
time = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
url = { workspace = true }
vbs = { workspace = true }

[dev-dependencies]
sequencer-utils = { path = "../utils", features = ["testing"] }

[features]
default = ["parallel"]
std = ["ark-std/std", "ark-ff/std"]
parallel = ["jf-signature/parallel", "jf-utils/parallel", "ark-ff/parallel"]
