[package]
name = "hotshot-builder-core"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
marketplace-builder-shared = { path = "../shared" }

anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
committable = { workspace = true }
futures = { workspace = true }
hotshot = { workspace = true }
hotshot-builder-api = { workspace = true }
hotshot-types = { workspace = true }
lru = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
tagged-base64 = { workspace = true }
tide-disco = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
vbs = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
hotshot-example-types = { workspace = true }

[lints]
workspace = true
