[package]
name = "marketplace-builder"
description = "A standalone builder service, marketplace version"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[features]
testing = ["hotshot-query-service", "sequencer-utils", "tempfile"]
embedded-db = []

[dependencies]
anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
committable = { workspace = true }
espresso-types = { path = "../types", features = ["testing"] }
ethers = { workspace = true }
futures = { workspace = true }
hotshot = { workspace = true }
hotshot-builder-api = { workspace = true }
hotshot-events-service = { workspace = true }
hotshot-orchestrator = { workspace = true }
hotshot-query-service = { workspace = true, optional = true }
hotshot-stake-table = { workspace = true }
hotshot-types = { workspace = true }
jf-merkle-tree = { workspace = true }
jf-signature = { workspace = true, features = ["bls"] }
marketplace-builder-core = { workspace = true }
marketplace-builder-shared = { workspace = true }
marketplace-solver = { path = "../marketplace-solver" }
portpicker = { workspace = true }
sequencer = { path = "../sequencer" }
sequencer-utils = { path = "../utils", optional = true }
surf = "2.3.1"
surf-disco = { workspace = true }
tempfile = { workspace = true, optional = true }
tide-disco = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
vbs = { workspace = true }

[dev-dependencies]
hotshot-query-service = { workspace = true }
marketplace-solver = { path = "../marketplace-solver", features = ["testing"] }
sequencer = { path = "../sequencer", features = ["testing"] }
sequencer-utils = { path = "../utils", features = ["testing"] }
tempfile = { workspace = true }
