[package]
name = "marketplace-solver"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"

[features]
testing = [
	"hotshot-query-service/testing",
	"portpicker",
]
embedded-db  = []

[dependencies]
anyhow = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
cld = { workspace = true }
committable = { workspace = true }
espresso-types = { path = "../types" }
futures = { workspace = true }
hotshot = { workspace = true }
hotshot-events-service = { workspace = true }
hotshot-query-service = { workspace = true, optional = true }
hotshot-types = { workspace = true }
jf-signature = { workspace = true }
portpicker = { workspace = true, optional = true } 
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [ "postgres", "macros" ] }
surf-disco = { workspace = true }
thiserror = { workspace = true }
tide-disco = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
vbs = { workspace = true }

[dev-dependencies]
marketplace-solver = { path = ".", features = [ "testing" ] }
portpicker = { workspace = true }
