[package]
name = "marketplace-builder-core"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1"
async-broadcast = "0.7"
async-compatibility-layer = { workspace = true, features = ["logging-utils"] }
async-lock = { workspace = true }
async-std = { workspace = true, features = ["unstable", "attributes"] }
async-trait = { workspace = true }
committable = { workspace = true }
derivative = { workspace = true }
futures = { workspace = true }
marketplace-builder-shared = { path = "../shared" }

hotshot = { workspace = true }
hotshot-builder-api = { workspace = true }
hotshot-types = { workspace = true }
lru = { workspace = true }
sha2 = { workspace = true }
tagged-base64 = { workspace = true }
tide-disco = { workspace = true }
tracing = { workspace = true }
vbs = { workspace = true }

[dev-dependencies]
hotshot-example-types = { workspace = true }
hotshot-macros = { workspace = true }
hotshot-testing = { workspace = true }
num_cpus = "1.16"
url = "2.5"

[lints]
workspace = true
