[package]
name = "marketplace-builder-core"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
marketplace-builder-shared = { path = "../shared" }

anyhow = "1"
async-broadcast = "0.7"
async-lock = { workspace = true }
async-trait = { workspace = true }
committable = { workspace = true }
derive_more = { workspace = true, features = ["deref", "deref_mut"] }
futures = { workspace = true }
hotshot = { workspace = true }
hotshot-builder-api = { workspace = true }
hotshot-types = { workspace = true }
lru = { workspace = true }
sha2 = { workspace = true }
tagged-base64 = { workspace = true }
tide-disco = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vbs = { workspace = true }

[dev-dependencies]
hotshot-example-types = { workspace = true }
hotshot-macros = { workspace = true }
hotshot-testing = { workspace = true }
num_cpus = "1.16"
url = "2.5"

[lints]
workspace = true
