[package]
name = "node-metrics"
description = "A Library for collecting, recording and distributing information about the Espresso Block Chain Network"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[features]
default = ["libp2p"]
testing = ["hotshot-testing"]
libp2p = []

[dependencies]
async-compatibility-layer = { workspace = true } 
async-std = { workspace = true }
bitvec = { workspace = true }
circular-buffer = { workspace = true }
futures = { workspace = true }
hotshot-query-service = { workspace = true }
hotshot-types = { workspace = true }
hotshot-stake-table = { workspace = true }
sequencer = { path = "../sequencer" }
serde = { workspace = true }
tide-disco = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
vbs = { workspace = true }

# Dependencies for feature `testing`
hotshot-testing = { workspace = true, optional = true  }
