[package]
name = "node-metrics"
description = "A Library for collecting, recording and distributing information about the Espresso Block Chain Network"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[features]
testing = ["sequencer/testing", "serde_json"]

[dependencies]
async-compatibility-layer = { workspace = true } 
async-std = { workspace = true }
bitvec = { workspace = true }
circular-buffer = { workspace = true }
futures = { workspace = true }
hotshot-query-service = { workspace = true }
hotshot-stake-table = { workspace = true }
hotshot-types = { workspace = true }
prometheus-parse = { version = "^0.2.5" }
reqwest = { workspace = true }
sequencer = { path = "../sequencer" }
serde = { workspace = true }
serde_json = { version = "^1.0.113", optional = true }
surf-disco = { workspace = true }
tagged-base64 = { workspace = true }
tide-disco = { version = "0.9.0" }
time = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
vbs = { workspace = true }

# Dependencies for feature `testing`
hotshot-testing = { workspace = true, optional = true }
