[package]
name = "node-metrics"
description = "A Library for collecting, recording and distributing information about the Espresso Block Chain Network"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[features]
testing = ["serde_json", "espresso-types/testing", "hotshot-query-service/testing"]

[dev-dependencies]
node-metrics = { path = ".", features = [ "testing" ] }

[dependencies]
async-lock = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
bitvec = { workspace = true }
circular-buffer = { workspace = true }
clap = { workspace = true }
espresso-types = { path = "../types" }
futures = { workspace = true }
hotshot = { workspace = true }
hotshot-example-types = { workspace = true }
hotshot-query-service = { workspace = true }
hotshot-stake-table = { workspace = true }
tokio = { workspace = true }

# Dependencies for feature `testing`
hotshot-types = { workspace = true }
prometheus-parse = { version = "^0.2.5" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { version = "^1.0.113", optional = true }
surf-disco = { workspace = true }
tide-disco = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
vbs = { workspace = true }
