[package]
name = "request-response"
version = { workspace = true }
edition = { workspace = true }

[dev-dependencies]
serde = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
byteorder = { version = "1", default-features = false }
derive_builder = { workspace = true }
derive_more = { workspace = true }
hotshot-types = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
tracing = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
