[package]
name = "marketplace-builder-shared"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
hotshot = { workspace = true }
hotshot-builder-api = { workspace = true }
hotshot-events-service = { workspace = true }
hotshot-example-types = { workspace = true }
hotshot-task-impls = { workspace = true }
hotshot-testing = { workspace = true }
hotshot-types = { workspace = true }

anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-compatibility-layer = { workspace = true, features = ["logging-utils"] }
async-std = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
committable = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
surf-disco = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
vbs = { workspace = true }
vec1 = { workspace = true }

[lints]
workspace = true
