[package]
name = "marketplace-builder-shared"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
committable = { workspace = true }
derive_more = { workspace = true, features = ["debug"] }
either = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hotshot = { workspace = true }
hotshot-builder-api = { workspace = true }
hotshot-events-service = { workspace = true }
hotshot-example-types = { workspace = true }
hotshot-task-impls = { workspace = true }
hotshot-testing = { workspace = true }
hotshot-types = { workspace = true }
jf-vid = { workspace = true }
nonempty-collections = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
surf-disco = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
vbs = { workspace = true }
vec1 = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
portpicker = "0.1.1"
tide-disco = { workspace = true }

[lints]
workspace = true
