[package]
name = "marketplace-builder-shared"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
committable = { workspace = true }
derive_more = { workspace = true, features = ["debug"] }
either = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hotshot = { workspace = true }
hotshot-builder-api = { workspace = true }
hotshot-events-service = { workspace = true }
hotshot-example-types = { workspace = true }
hotshot-task-impls = { workspace = true }
hotshot-testing = { workspace = true }
hotshot-types = { workspace = true }
jf-vid = { workspace = true }
nonempty-collections = { workspace = true }
once_cell = { workspace = true }
quick_cache = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
surf-disco = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
vbs = { workspace = true }
vec1 = { workspace = true }

[dev-dependencies]
portpicker = { workspace = true }
tide-disco = { workspace = true }
tracing-test = { workspace = true }

[lints]
workspace = true
