[package]
name = "tests"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = false

[[test]]
name = "integration"
path = "main.rs"

[dev-dependencies]
anyhow = { workspace = true }
client = { path = "../client" }
dotenvy = { workspace = true }
espresso-types = { path = "../types", features = ["testing"] }
ethers = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
surf-disco = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
vbs = { workspace = true }
